--- a/Fiori-ui5-onedemand-inicio-curso/webapp/view/HelloPanel.view.xml
+++ b/Fiori-ui5-onedemand-inicio-curso/webapp/view/HelloPanel.view.xml
@@ -7,7 +7,12 @@
       class="sapUiResponsiveMargin"
       width="auto">
       <content>
-         <Button
+        <Button
+            id="helloDialogButton"
+            text="{i18n>openDialogButtonText}"
+            press=".onOpenDialog"
+            class="sapUiSmallMarginEnd"/>
+        <Button
             text="{i18n>showHelloButtonText}"
             press=".onShowHello"
             class="myCustomButton"/>
