--- a/Fiori-ui5-onedemand-inicio-curso/webapp/view/InvoiceList.view.xml
+++ b/Fiori-ui5-onedemand-inicio-curso/webapp/view/InvoiceList.view.xml
@@ -10,17 +10,26 @@
       <items>
          <ObjectListItem
             title="{invoice>Quantity} x {invoice>ProductName}"
-                number="{
-                    parts: [
-                        'invoice>ExtendedPrice',
-                        'view>/currency'
-                    ],
-                    type: 'sap.ui.model.type.Currency',
-                    formatOptions: {
-                        showMeasure: false
-                    }
-                }"
-                numberUnit="{view>/currency}"/>
+            number="{
+                parts: [
+                    'invoice>ExtendedPrice',
+                    'view>/currency'
+                ],
+                type: 'sap.ui.model.type.Currency',
+                formatOptions: {
+                    showMeasure: false
+                }
+            }"
+            numberUnit="{view>/currency}"
+            numberState="{= ${invoice>ExtendedPrice} > 50 ? 'Error' : 'Success' }">
+                <firstStatus>
+                    <ObjectStatus
+                        text="{
+                            path: 'invoice>Status',
+                            formatter: '.formatter.statusText'
+                        }"/>
+                </firstStatus>
+            </ObjectListItem>
       </items>
    </List>
 </mvc:View>
