--- a/Fiori-ui5-onedemand-inicio-curso/webapp/view/InvoiceList.view.xml
+++ b/Fiori-ui5-onedemand-inicio-curso/webapp/view/InvoiceList.view.xml
@@ -1,12 +1,18 @@
 <mvc:View
     controllerName="ui5.walkthrough.controller.InvoiceList"
-   xmlns="sap.m"
-   xmlns:mvc="sap.ui.core.mvc">
-   <List
+    xmlns="sap.m"
+    xmlns:mvc="sap.ui.core.mvc">
+    <List
       headerText="{i18n>invoiceListTitle}"
       class="sapUiResponsiveMargin"
       width="auto"
-      items="{invoice>/Invoices}" >
+      items="{
+        path : 'invoice>/Invoices',
+        sorter : {
+            path : 'ShipperName',
+            group : true
+        }
+    }">
             <headerToolbar>
          <Toolbar>
             <Title text="{i18n>invoiceListTitle}"/>
