--- a/Fiori-ui5-onedemand-inicio-curso/webapp/view/Detail.view.xml
+++ b/Fiori-ui5-onedemand-inicio-curso/webapp/view/Detail.view.xml
@@ -4,6 +4,8 @@
 	xmlns:mvc="sap.ui.core.mvc">
 	<Page
 		title="{i18n>detailPageTitle}">
+		showNavButton="true"
+		navButtonPress=".onNavBack">
 		<ObjectHeader
 			intro="{invoice>ShipperName}"
 			title="{invoice>ProductName}"/>
